# filecoin-ffi

./: proofs.go
rust/: Cargo.toml
rust/src/proofs/: api.rs
