[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filecoin-ffi"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { version = "0.10.0", default-features = false, features = ["blst"] }
blstrs = { version = "0.3" }
byteorder = "1.2"
drop_struct_macro_derive = "0.5.0"
ff = { version = "0.3.1", package = "fff" }
ffi-toolkit = "0.5.0"
filepath = "0.1.1"
groupy = "0.4.1"
libc = "0.2.58"
log = "0.4.7"
fil_logger = "0.1.0"
rand = "0.7"
rand_chacha = "0.2.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { version = "0.14.1", default-features = false }
serde_json = "1.0.46"
rust-gpu-tools = "0.3.0"
#storage-proofs-porep = { version = "~8.0.1", default-features = false }
filecoin-proofs = "8.0.4"
filecoin-hashers = "3.0.3"
storage-proofs-post = "8.0.3"
storage-proofs-porep = "8.0.3"
storage-proofs-core = "8.0.3"
sha2raw = "3.0.3"
fr32 = "1.0.3"
fil-proofs-param = "3.0.3"

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "8.0.1"
default-features = false

[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.0.8"

[features]
default = ["pairing", "gpu", "multicore-sdr" ]
pairing = ["filecoin-proofs-api/pairing", "bellperson/pairing", "storage-proofs-porep/pairing"]
blst = ["filecoin-proofs-api/blst", "bellperson/blst", "storage-proofs-porep/blst"]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
gpu = ["filecoin-proofs-api/gpu", "bellperson/gpu", "storage-proofs-porep/gpu"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]

[patch.crates-io]
filecoin-proofs = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3", version = "8.0.4" }
filecoin-hashers = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
storage-proofs-post = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
storage-proofs-porep = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
storage-proofs-core = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
sha2raw = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
fr32 = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
fil-proofs-param = { git = "https://github.com/zhiquan911/rust-fil-proofs", branch = "mzqdev-8.0.3" }
